--- a/06 Apps/Assignment02.BlazorWebApp/Pages/Admin/User/UserListPage.razor
+++ b/06 Apps/Assignment02.BlazorWebApp/Pages/Admin/User/UserListPage.razor
@@ -12,6 +12,7 @@
     <PageTitle>User</PageTitle>
     <h3>User</h3>
 
+    <SfButton CssClass="e-inherit" IconCss="e-icons e-plus" OnClick="() => AddNew()">Add New User</SfButton>
     <div>
         <SfGrid DataSource="@Users" AllowPaging=true AllowSelection="true" AllowSorting="true" AllowFiltering="true" Height="600">
             <GridPageSettings PageCount="5" PageSizes="true"></GridPageSettings>
